force-app/main/default/objects/User/fields/Additional_Accounting_Tax_topics_Comfort__c.field-meta.xml
<CustomField>
    <fullName>Additional_Accounting_Tax_topics_Comfort__c</fullName>
    <label>Additional Accounting/Tax topics Comfort</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Payroll Taxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>