force-app/main/default/objects/User/fields/Analyst_1__c.field-meta.xml
<CustomField>
    <fullName>Analyst_1__c</fullName>
    <label>Analyst 1</label>
    <relationshipName>Analyst_1</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>