force-app/main/default/objects/User/fields/Analyst_2__c.field-meta.xml
<CustomField>
    <fullName>Analyst_2__c</fullName>
    <label>Analyst 2</label>
    <relationshipName>Analyst_2</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>