force-app/main/default/objects/User/fields/Any_Additional_Skills_Knowledge_Expertis__c.field-meta.xml
<CustomField>
    <fullName>Any_Additional_Skills_Knowledge_Expertis__c</fullName>
    <label>Any Additional Skills/Knowledge/Expertis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>