force-app/main/default/objects/User/fields/Available_Entity_Types__c.field-meta.xml
<CustomField>
    <fullName>Available_Entity_Types__c</fullName>
    <description>Determines which types of entities a sales rep is able to receive appointments for.</description>
    <inlineHelpText>Determines which types of entities a sales rep is able to receive appointments for.</inlineHelpText>
    <label>Available Entity Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>C-Corp</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>S-Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>