force-app/main/default/objects/User/fields/Available_Restricted_Lead_Types__c.field-meta.xml
<CustomField>
    <fullName>Available_Restricted_Lead_Types__c</fullName>
    <label>Available Restricted Lead Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>