force-app/main/default/objects/User/fields/Bookkeeper_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeper_Assigned__c</fullName>
    <label>Bookkeeper Assigned</label>
    <relationshipName>Bookkeeper_Assigned</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>