force-app/main/default/objects/User/fields/Can_Handle_VIP_Clients__c.field-meta.xml
<CustomField>
    <fullName>Can_Handle_VIP_Clients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Handle VIP Clients</label>
    <type>Checkbox</type>
</CustomField>