force-app/main/default/objects/User/fields/CP_Accountant_Access__c.field-meta.xml
<CustomField>
    <fullName>CP_Accountant_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CP Accountant Access</label>
    <type>Checkbox</type>
</CustomField>