force-app/main/default/objects/User/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <label>Credentials</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>