force-app/main/default/objects/User/fields/Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Service</label>
    <type>Checkbox</type>
</CustomField>