force-app/main/default/objects/User/fields/Dedicated_Team_Number__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Team_Number__c</fullName>
    <label>Dedicated Team Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>