force-app/main/default/objects/User/fields/International_Taxation__c.field-meta.xml
<CustomField>
    <fullName>International_Taxation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Taxation</label>
    <type>Checkbox</type>
</CustomField>