force-app/main/default/objects/User/fields/Limit_7_30__c.field-meta.xml
<CustomField>
    <fullName>Limit_7_30__c</fullName>
    <label>Limit 7:30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>