force-app/main/default/objects/User/fields/Long_ID__c.field-meta.xml
<CustomField>
    <fullName>Long_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Long ID</label>
    <type>Text</type>
</CustomField>