force-app/main/default/objects/User/fields/LZ_LP_ID__c.field-meta.xml
<CustomField>
    <fullName>LZ_LP_ID__c</fullName>
    <displayFormat>L-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>LZ LP ID</label>
    <type>AutoNumber</type>
</CustomField>