force-app/main/default/objects/User/fields/Manager_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_Long_ID__c</fullName>
    <description>The Long ID of the Manager</description>
    <formula>Manager.Long_ID__c</formula>
    <label>Manager Long ID</label>
    <type>Text</type>
</CustomField>