force-app/main/default/objects/User/fields/Mitel_Team__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Team__c</fullName>
    <label>Mitel Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>