force-app/main/default/objects/User/fields/Mitel_Team_Extension__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Team_Extension__c</fullName>
    <label>Mitel Team Extension</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4101</fullName>
            </value>
            <value>
                <fullName>4102</fullName>
            </value>
            <value>
                <fullName>4104</fullName>
            </value>
            <value>
                <fullName>4105</fullName>
            </value>
            <value>
                <fullName>4106</fullName>
            </value>
            <value>
                <fullName>4111</fullName>
            </value>
            <value>
                <fullName>919544629600</fullName>
            </value>
            <value>
                <fullName>4108</fullName>
            </value>
            <value>
                <fullName>7777</fullName>
            </value>
            <value>
                <fullName>4103</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>