force-app/main/default/objects/User/fields/Most_Recent_Partner_TSA_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Partner_TSA_Opt_Out_Date__c</fullName>
    <description>The Date/Time of the most recent opt-out for partner TSA appointments</description>
    <inlineHelpText>The Date/Time of the most recent opt-out for partner TSA appointments</inlineHelpText>
    <label>Most Recent Partner TSA Opt-Out Date</label>
    <type>DateTime</type>
</CustomField>