force-app/main/default/objects/User/fields/Most_Recent_TSA_Partner_Opt_Out_User__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_TSA_Partner_Opt_Out_User__c</fullName>
    <description>The User that initiated the most recent partner TSA opt-out</description>
    <inlineHelpText>The User that initiated the most recent partner TSA opt-out</inlineHelpText>
    <label>Most Recent TSA Partner Opt-Out User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>