force-app/main/default/objects/User/fields/Namely_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Namely_Employee_ID__c</fullName>
    <label>Namely Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>