force-app/main/default/objects/User/fields/New_Hire_End_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Hire_End_Date__c</fullName>
    <label>New Hire End Date</label>
    <type>Date</type>
</CustomField>