force-app/main/default/objects/User/fields/Non_Profit__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Profit</label>
    <type>Checkbox</type>
</CustomField>