force-app/main/default/objects/User/fields/Out_of_Office__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set status as &apos;Out of Office.&apos; Incoming appointments will go to managers.</description>
    <label>Out of Office</label>
    <type>Checkbox</type>
</CustomField>