force-app/main/default/objects/User/fields/Paid_Digital_Entity_Performance__c.field-meta.xml
<CustomField>
    <fullName>Paid_Digital_Entity_Performance__c</fullName>
    <label>Paid Digital Entity Performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>New Hire</fullName>
            </value>
            <value>
                <fullName>No Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>