force-app/main/default/objects/User/fields/Pay_Structure__c.field-meta.xml
<CustomField>
    <fullName>Pay_Structure__c</fullName>
    <description>Sales reps pay structure</description>
    <inlineHelpText>This information is used for commission Sales Reps.</inlineHelpText>
    <label>Pay Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draw</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>