force-app/main/default/objects/User/fields/Performance_Weight__c.field-meta.xml
<CustomField>
    <fullName>Performance_Weight__c</fullName>
    <label>Performance Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>