force-app/main/default/objects/User/fields/Prohibited_Lead_Source_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Prohibited_Lead_Source_Expiration_Date__c</fullName>
    <label>Prohibited Lead Source Expiration Date</label>
    <type>Date</type>
</CustomField>