force-app/main/default/objects/User/fields/Prohibited_Lead_Sources__c.field-meta.xml
<CustomField>
    <fullName>Prohibited_Lead_Sources__c</fullName>
    <label>Prohibited Lead Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bark</fullName>
            </value>
            <value>
                <fullName>CPA Directory</fullName>
            </value>
            <value>
                <fullName>MVF Global</fullName>
            </value>
            <value>
                <fullName>ZenBusiness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>