force-app/main/default/objects/User/fields/Public_Profile_Pic__c.field-meta.xml
<CustomField>
    <fullName>Public_Profile_Pic__c</fullName>
    <label>Public Profile Pic</label>
    <type>Url</type>
</CustomField>