force-app/main/default/objects/User/fields/QA_Score__c.field-meta.xml
<CustomField>
    <fullName>QA_Score__c</fullName>
    <label>QA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>