force-app/main/default/objects/User/fields/RingCentral_Extension__c.field-meta.xml
<CustomField>
    <fullName>RingCentral_Extension__c</fullName>
    <label>RingCentral Extension</label>
    <length>50</length>
    <type>Text</type>
</CustomField>