force-app/main/default/objects/User/fields/Role_reporting__c.field-meta.xml
<CustomField>
    <fullName>Role_reporting__c</fullName>
    <formula>UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role (reporting)</label>
    <type>Text</type>
</CustomField>