force-app/main/default/objects/User/fields/RTA_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>RTA_Hourly_Rate__c</fullName>
    <label>RTA Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>