force-app/main/default/objects/User/fields/RTP_hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>RTP_hourly_Rate__c</fullName>
    <description>RTP hr rate for Accountants</description>
    <inlineHelpText>RTP hr rate for Accountants</inlineHelpText>
    <label>RTP Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>