force-app/main/default/objects/User/fields/Sales_Management_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Management_Role__c</fullName>
    <description>Field to indicate whether the user has a role in sales management</description>
    <formula>IF(
 UserRole.Name = &apos;Sales Manager&apos;, 
&apos;Manager&apos;,

IF(INCLUDES( Skills_Sales__c , &apos;Team Lead&apos;), &apos;Team Lead&apos;,null))</formula>
    <inlineHelpText>Does the user have a role in sales management?</inlineHelpText>
    <label>Sales Management Role</label>
    <type>Text</type>
</CustomField>