force-app/main/default/objects/User/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <label>Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BNA Team</fullName>
            </value>
            <value>
                <fullName>Brian Labus</fullName>
            </value>
            <value>
                <fullName>Christopher Sample</fullName>
            </value>
            <value>
                <fullName>Entity Formation Team</fullName>
            </value>
            <value>
                <fullName>Floria Royals</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Israel Vazquez</fullName>
            </value>
            <value>
                <fullName>Jason Roman</fullName>
            </value>
            <value>
                <fullName>JT Keenan</fullName>
            </value>
            <value>
                <fullName>Keith Marzi</fullName>
            </value>
            <value>
                <fullName>Michael Cashman</fullName>
            </value>
            <value>
                <fullName>Michele Myers</fullName>
            </value>
            <value>
                <fullName>Nesting Team</fullName>
            </value>
            <value>
                <fullName>Training Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>