force-app/main/default/objects/User/fields/Scheduler_Availability__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Availability__c</fullName>
    <label>Scheduler Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>