force-app/main/default/objects/User/fields/Sell_Client_Books__c.field-meta.xml
<CustomField>
    <fullName>Sell_Client_Books__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sell Client Books</label>
    <type>Checkbox</type>
</CustomField>