force-app/main/default/objects/User/fields/Sell_CPA_Letter__c.field-meta.xml
<CustomField>
    <fullName>Sell_CPA_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sell CPA Letter</label>
    <type>Checkbox</type>
</CustomField>