force-app/main/default/objects/User/fields/Skills_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Skills_Accounting__c</fullName>
    <label>Accounting Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1800 BTP</fullName>
            </value>
            <value>
                <fullName>401K</fullName>
            </value>
            <value>
                <fullName>A La Carte</fullName>
            </value>
            <value>
                <fullName>Annual Report/Franchise Tax</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>BizCounsel</fullName>
            </value>
            <value>
                <fullName>Bkkg Advisory Onboarding</fullName>
            </value>
            <value>
                <fullName>Bkkg Onboarding</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Business Deduction</fullName>
            </value>
            <value>
                <fullName>Business Entity Classification</fullName>
            </value>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>CIS Team</fullName>
            </value>
            <value>
                <fullName>ClientBooks Bookkeeper</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
            <value>
                <fullName>CSA Team</fullName>
            </value>
            <value>
                <fullName>Development Testing</fullName>
            </value>
            <value>
                <fullName>Digital Business Solutions</fullName>
            </value>
            <value>
                <fullName>Dissolutions</fullName>
            </value>
            <value>
                <fullName>Easy VTO</fullName>
            </value>
            <value>
                <fullName>ECE Preparation</fullName>
            </value>
            <value>
                <fullName>Embark</fullName>
            </value>
            <value>
                <fullName>Embark Admin</fullName>
            </value>
            <value>
                <fullName>Embark Preparer</fullName>
            </value>
            <value>
                <fullName>Embark Reviewer</fullName>
            </value>
            <value>
                <fullName>Entity Formation</fullName>
            </value>
            <value>
                <fullName>Equip Setter</fullName>
            </value>
            <value>
                <fullName>Escalation Management</fullName>
            </value>
            <value>
                <fullName>Estimated Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>