force-app/main/default/objects/User/fields/Skills_Sales__c.field-meta.xml
<CustomField>
    <fullName>Skills_Sales__c</fullName>
    <label>Sales Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Setter</fullName>
            </value>
            <value>
                <fullName>Closer</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Corp Upsales</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>Dissolution</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>Cross-Sale</fullName>
            </value>
            <value>
                <fullName>ClientBooksConsult</fullName>
            </value>
            <value>
                <fullName>ClientBooks Cross-Sell</fullName>
            </value>
            <value>
                <fullName>Entity Formation Sales</fullName>
            </value>
            <value>
                <fullName>Equip Sales</fullName>
            </value>
            <value>
                <fullName>Equip Setter</fullName>
            </value>
            <value>
                <fullName>Paid Digital</fullName>
            </value>
            <value>
                <fullName>CBCSched</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Calculator Override</fullName>
            </value>
            <value>
                <fullName>Digital Business Solutions</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Paid Digital–CORE</fullName>
            </value>
            <value>
                <fullName>Paid Digital–Entity</fullName>
            </value>
            <value>
                <fullName>TSA</fullName>
            </value>
            <value>
                <fullName>Extended Hours</fullName>
            </value>
            <value>
                <fullName>TSA-Spanish</fullName>
            </value>
            <value>
                <fullName>Paid Digital-Spanish</fullName>
            </value>
            <value>
                <fullName>HRB</fullName>
            </value>
            <value>
                <fullName>Guided Selling-Setter</fullName>
            </value>
            <value>
                <fullName>Guided Selling-TSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>